--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <title>Random Design Co.</title>
     </head>
     <body>
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+       <header class="pageheader">
+        <h1>Be Random</h1>
+        <button type="button" name="button"><a href="#">OMG YES!</a></button>
+      </header>
+      <section class="aboutus">
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+         Eos nam non, explicabo cum inventore, molestiae fuga nulla
+         repellendus architecto rerum nostrum at amet, officia eum quisquam
+         earum ipsam similique ad!</p>
+      </section>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+      <section class="work">
+        <h2>LATEST WORK</h2>
+          <article class="projects">
+            <figure><img src="a12-assets/1-cocktail.jpeg" alt="cocktail">PROJECT 1</figure>
+            <figure><img src="a12-assets/2-disco.jpeg" alt="disco">PROJECT 2</figure>
+            <figure><img src="a12-assets/3-bookstore.jpeg" alt="bookstore">PROJECT 3</figure>
+            <figure><img src="a12-assets/4-traffic.jpeg" alt="traffic">PROJECT 4</figure>
+            <figure><img src="a12-assets/5-concert.jpg" alt="concert">PROJECT 5</figure>
+            <figure><img src="a12-assets/6-nightlife.jpg" alt="nightlife">PROJECT 6</figure>
+            <figure><img src="a12-assets/7-bar.jpg" alt="bar">PROJECT 7</figure>
+          </article>
+        </section>
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+        <footer class="pagefooter">
+          <p>© 2016 Random Design Co.</p>
+        </footer>
     </body>
 </html>
