added things to pagewrap and navbar

--- a/index.html
+++ b/index.html
@@ -4,36 +4,48 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Random Design Co.</title>
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="font-awesome-4.7.0/fonts/fontawesome-webfont.eot">
     </head>
     <body>
-       <header class="pageheader">
-        <h1>Be Random</h1>
-        <button type="button" name="button"><a href="#">OMG YES!</a></button>
-      </header>
-      <section class="aboutus">
-        <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-         Eos nam non, explicabo cum inventore, molestiae fuga nulla
-         repellendus architecto rerum nostrum at amet, officia eum quisquam
-         earum ipsam similique ad!</p>
-      </section>
 
-      <section class="work">
-        <h2>LATEST WORK</h2>
-          <article class="projects">
-            <figure><img src="a12-assets/1-cocktail.jpeg" alt="cocktail">PROJECT 1</figure>
-            <figure><img src="a12-assets/2-disco.jpeg" alt="disco">PROJECT 2</figure>
-            <figure><img src="a12-assets/3-bookstore.jpeg" alt="bookstore">PROJECT 3</figure>
-            <figure><img src="a12-assets/4-traffic.jpeg" alt="traffic">PROJECT 4</figure>
-            <figure><img src="a12-assets/5-concert.jpg" alt="concert">PROJECT 5</figure>
-            <figure><img src="a12-assets/6-nightlife.jpg" alt="nightlife">PROJECT 6</figure>
-            <figure><img src="a12-assets/7-bar.jpg" alt="bar">PROJECT 7</figure>
-          </article>
+       <div class="pagewrap">
+
+         <header class="pageheader">
+          <h1>Be Random</h1>
+          <button type="button" name="button"><a href="#">OMG YES!</a></button>
+        </header>
+        <nav class="navbar">
+          <h2>RANDOM DESIGN CO.</h2>
+        </nav>
+        <section class="aboutus">
+          <h2>ABOUT US</h2>
+          <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+           Eos nam non, explicabo cum inventore, molestiae fuga nulla
+           repellendus architecto rerum nostrum at amet, officia eum quisquam
+           earum ipsam similique ad!</p>
         </section>
 
+        <section class="work">
+          <h2>LATEST WORK</h2>
+            <article class="projects">
+              <figure><img src="a12-assets/1-cocktail.jpeg" alt="cocktail">PROJECT 1</figure>
+              <figure><img src="a12-assets/2-disco.jpeg" alt="disco">PROJECT 2</figure>
+              <figure><img src="a12-assets/3-bookstore.jpeg" alt="bookstore">PROJECT 3</figure>
+              <figure><img src="a12-assets/4-traffic.jpeg" alt="traffic">PROJECT 4</figure>
+              <figure><img src="a12-assets/5-concert.jpg" alt="concert">PROJECT 5</figure>
+              <figure><img src="a12-assets/6-nightlife.jpg" alt="nightlife">PROJECT 6</figure>
+              <figure><img src="a12-assets/7-bar.jpg" alt="bar">PROJECT 7</figure>
+            </article>
+          </section>
 
-        <footer class="pagefooter">
-          <p>© 2016 Random Design Co.</p>
-        </footer>
+
+          <footer class="pagefooter">
+            <p>© 2016 Random Design Co.</p>
+          </footer>
+
+        </div>
+
     </body>
 </html>
