Added many things
Worked on navigation bar, and the dropdown menu there, also the header. Added the lines.jpg image and etc.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
        <div class="pagewrap">
 
          <header class="pageheader">
+           <img src="a12-assets/purple-bg.jpeg" alt="purple">
           <h1>Be Random</h1>
           <button type="button" name="button"><a href="#">OMG YES!</a></button>
         </header>
         <nav class="navbar">
           <h2>RANDOM DESIGN CO.</h2>
+          <div class="dropdown">
+            <span><img src="a12-assets/lines.jpg" alt="lines"></span>
+             <div class="dropdown-content">
+              <p>this is the nav block</p>
+            </div>
+          </div>
+
         </nav>
         <section class="aboutus">
           <h2>ABOUT US</h2>
