Continued to work on the header...
...and tried to make the text resize nicely on it, but it still didn't work how I wanted it to.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Random Design Co.</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/fonts/fontawesome-webfont.eot">
+         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
     </head>
     <body>
 
@@ -13,9 +14,10 @@
 
          <header class="pageheader">
            <img src="a12-assets/purple-bg.jpeg" alt="purple">
-          <h1>Be Random</h1>
-          <button type="button" name="button"><a href="#">OMG YES!</a></button>
+          <h1>BE RANDOM</h1>
+          <a href="#">OMG YES!</a>
         </header>
+
         <nav class="navbar">
           <h2>RANDOM DESIGN CO.</h2>
           <div class="dropdown">
