--- a/index.html
+++ b/index.html
@@ -37,18 +37,46 @@
            earum ipsam similique ad!</p>
         </section>
 
-        <section class="work">
-          <h2>LATEST WORK</h2>
-            <article class="projects">
-              <figure><img src="a12-assets/1-cocktail.jpeg" alt="cocktail">PROJECT 1</figure>
-              <figure><img src="a12-assets/2-disco.jpeg" alt="disco">PROJECT 2</figure>
-              <figure><img src="a12-assets/3-bookstore.jpeg" alt="bookstore">PROJECT 3</figure>
-              <figure><img src="a12-assets/4-traffic.jpeg" alt="traffic">PROJECT 4</figure>
-              <figure><img src="a12-assets/5-concert.jpg" alt="concert">PROJECT 5</figure>
-              <figure><img src="a12-assets/6-nightlife.jpg" alt="nightlife">PROJECT 6</figure>
-              <figure><img src="a12-assets/7-bar.jpg" alt="bar">PROJECT 7</figure>
-            </article>
-          </section>
+          <section class="work">
+
+            <h2>LATEST WORK</h2>
+
+              <article class="project">
+                  <h3>PROJECT 1</h3>
+                  <img src="a12-assets/1-cocktail.jpeg" alt="cocktail">
+                </article>
+
+              <article class="project">
+                  <h3>PROJECT 2</h3>
+                  <img src="a12-assets/2-disco.jpeg" alt="disco">
+              </article>
+
+              <article class="project">
+                  <h3>PROJECT 3</h3>
+                  <img src="a12-assets/3-bookstore.jpeg" alt="bookstore">
+              </article>
+
+              <article class="project">
+                  <h3>PROJECT 4</h3>
+                  <img src="a12-assets/4-traffic.jpeg" alt="traffic">
+              </article>
+
+              <article class="project">
+                  <h3>PROJECT 5</h3>
+                  <img src="a12-assets/5-concert.jpg" alt="concert">
+               </article>
+
+              <article class="project">
+                  <h3>PROJECT 6</h3>
+                  <img src="a12-assets/6-nightlife.jpg" alt="nightlife">
+              </article>
+
+              <article class="project">
+                  <h3>PROJECT 7</h3>
+                  <img class="bar" src="a12-assets/7-bar.jpg" alt="bar">
+              </article>
+
+            </section>
 
 
           <footer class="pagefooter">
