added footer and etc. to html and started with css

--- a/fixed.html
+++ b/fixed.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <section class="page-section">
+    <section class="page-section jumbotron">
 
       <h2>BE RANDOM</h2>
 
@@ -29,27 +29,67 @@
 
     <section class="page-section">
 
-    ABOUT US
+      <h2>ABOUT US</h2>
 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Eos nam non, explicabo cum inventore, molestiae fuga nulla
-    repellendus architecto rerum nostrum at amet, officia eum quisquam
-    earum ipsam similique ad!
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Eos nam non, explicabo cum inventore, molestiae fuga nulla
+      repellendus architecto rerum nostrum at amet, officia eum quisquam
+      earum ipsam similique ad!</p>
 
-  </section>
+    </section>
 
-    LATEST WORK
+    <section class="page-section">
 
-    PROJECT 1
-    PROJECT 2
-    PROJECT 3
-    PROJECT 4
-    PROJECT 5
-    PROJECT 6
-    PROJECT 7
+      <h2>LATEST WORK</h2>
 
-    --
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 1</h3>
+            <img src="a12-assets/1-cocktail.jpeg" alt="Cocktail">
+          </article>
+        </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 2</h3>
+            <img src="a12-assets/2-disco.jpeg" alt="Disco">
+          </article>
+        </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 3</h3>
+            <img src="a12-assets/3-bookstore.jpeg" alt="Bookstore">
+          </article>
+        </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 4</h3>
+            <img src="a12-assets/4-traffic.jpeg" alt="Traffic">
+          </article>
+        </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 5</h3>
+            <img src="a12-assets/5-concert.jpg" alt="Concert">
+          </article>
+        </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 6</h3>
+            <img src="a12-assets/6-nightlife.jpg" alt="Nightlife">
+          </article>
+        </a>
+        <a href="#">
+          <article class="project-thumb">
+            <h3>Project 7</h3>
+            <img src="a12-assets/7-bar" alt="Bar">
+          </article>
+        </a>
 
-    © 2016 Random Design Co.
+    </section>
+
+    <footer class="page-footer">
+      <p> © 2016 Random Design Co.</p>
+    </footer>
+
   </body>
 </html>
