--- a/fixed.html
+++ b/fixed.html
@@ -7,12 +7,12 @@
     <title>Random Design Co.</title>
     <link rel="stylesheet" href="css/fixed.css">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
 
-    <header>
+    <header class="page-header">
       <h1>RANDOM DESIGN CO.</h1>
       <nav class="main-nav">
         <i class="fa fa-bars" aria-hidden="true"></i>
@@ -20,11 +20,11 @@
     </header>
 
     <section class="page-section jumbotron">
-
-      <h2>BE RANDOM</h2>
-
-      <a href="#" class="btn">OMG YES!</a>
-
+      <div class="jumbotron__content">
+        <h2>BE RANDOM</h2>
+        <a href="#" class="btn">OMG YES!</a>
+     </div>
+         <img class="jumbotron__bg" src="a12-assets/purple-bg.jpeg" alt="Abstract Purple">
     </section>
 
     <section class="page-section">
@@ -81,7 +81,7 @@
         <a href="#">
           <article class="project-thumb">
             <h3>Project 7</h3>
-            <img src="a12-assets/7-bar" alt="Bar">
+            <img src="a12-assets/7-bar.jpg" alt="Bar">
           </article>
         </a>
 
